[package]
name = "rotkeappchen"
version = "0.1.0"
authors = ["DISTREAT"]
description = "Crate for generating stateless and rotating verification codes."
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/DISTREAT/rotkeappchen-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[dependencies]
blake3 = "1.5.0"
